[tool.poetry]
name = "momento-python-redis-client"
version = "0.1.0"
description = ""
authors = ["Momento <hello@momentohq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7,<3.12"
async-timeout = "4.0.2"
black = "22.12.0"
blinker = "1.6.2"
flask-caching = "1.10.1"
cachelib = "0.10.2"
click = "8.1.3"
decorator = "5.1.1"
dogpile-cache = "1.2.0"
flake8 = "5.0.4"
flask = "2.2.5"
flask-sqlalchemy = "3.0.3"
grpcio = "1.54.2"
isort = "5.11.5"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.2"
mccabe = "0.7.0"
momento = "1.7.1"
momento-wire-types = "^0.67"
pathspec = "0.11.1"
pbr = "5.11.1"
platformdirs = "3.5.1"
protobuf = "4.23.0"
pycodestyle = "2.9.1"
pyflakes = "2.5.0"
pyjwt = "2.7.0"
redis = "4.6.0"
sqlalchemy = "2.0.13"
stevedore = "3.5.2"
typing-extensions = "4.5.0"
werkzeug = "2.2.2"
types-redis = "^4.6.0.4"
types-protobuf = "^4.24.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"
mypy-extensions = "1.0.0"
types-setuptools = "^65.3.0"
flake8-docstrings = "^1.7.0"

[tool.poetry.group.format.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.7"

# Increase our expectations
check_untyped_defs          = true
disallow_incomplete_defs    = true
disallow_untyped_defs       = true
no_implicit_optional        = true
show_column_numbers         = true
show_error_codes            = true
strict_optional             = true
warn_no_return              = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_ignores         = true
disallow_any_decorated      = true
disallow_any_explicit       = true
#disallow_any_expr           = true
disallow_any_generics       = true
disallow_untyped_calls      = true
disallow_untyped_decorators = true
strict_equality             = true

# These are too strict for us at the moment
disallow_any_unimported     = false
disallow_subclassing_any    = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_expr           = false
disallow_any_decorated      = false
disallow_untyped_decorators = false


[tool.black]
line-length = 120
target-version = ["py37"]
include = "\\.pyi?$"
exclude = """
/(
  \\.git
  | \\.mypy_cache
  | \\.pytest_cache
  | \\.venv
  | dist
)
"""

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
extend_skip_glob = ["src/momento/errors/__init__.py"]
