[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7,<3.12"
momento-redis = { git = "https://github.com/momentohq/momento-python-redis-client", branch = "add-redis-compat-client" }
redis = "4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
